--- a/css/main.css
+++ b/css/main.css
@@ -1,50 +1,56 @@
 body {
-  margin: 60px auto;
-  width: 70%;
+	margin: 60px auto;
+	width: 70%;
+	background-color: #000000
 }
 
 nav ul {
-  font-family: 'Helvetica', 'Arial', 'Sans-Serif';
-  padding: 0px;
-  list-style: none;
-  font-weight: bold;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	color: #ffffff
+	padding: 0px;
+	list-style: none;
+	font-weight: bold;
 }
 
 nav ul li {
-  display: inline;
-  margin-right: 20px;
+	display: inline;
+	margin-right: 20px;
+	color: #ffffff
+}
+
+ul {
+	list-style-type: circle;
+	list-style-position: inside;
 }
 
 a {
-  text-decoration: none;
-  color: #999;
+	text-decoration: none;
+	color: #ffffff;
 }
 
 a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 h1 {
-  font-size: 3em;
-  font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	font-size: 1.3em;
+	font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+	color: #ffffff
 }
 
 p {
-  font-size: 1.5em;
-  line-height: 1.4em;
-  color: #333;
+	font-size: 1.2em;
+	line-height: .5em;
+	color: #ffffff;
 }
 
 footer {
-  border-top: 1px solid #d5d5d5;
-  font-size: .3em;
+	border-top: 1px solid #d5d5d5;
+	font-size: .3em;
+	color: #ffffff
 }
 
-ul.posts {
-  margin: 20px auto 40px;
-  font-size: 1.5em;
+.uline {
+	text-decoration: underline;
 }
 
-ul.posts li {
-  list-style: none;
-}
