--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{ page.title }}</title>
+<head>
+    <title>ERROR418 | {{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
+</head>
+ 
+<header>
+        <nav>
+        <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/tools/tools.html">Bees</a></li>
+                <li><a href="/scripting/scripting.html">Scripting</a></li>
+                <li><a href="/services/services.html">Services</a></li>
+                <li><a href="/links/links.html">Links</a></li>
+        </ul>
+        </nav>
+</header>
 
-  <body>
-    <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-    </ul>
-    </nav>
+<body>
     <div class="container">
     
     {{ content }}
     
-    </div><!-- /container -->
-    
-  <footer>
+    </div><!-- End container -->
+
+</body>
+
+<footer>
   <p>Not the bees!</p>
-  </footer>
-  </body>
+</footer>
+
 </html>
